# chat_ui

./: .gitignore  pyproject.toml
.ipynb_checkpoints/: chain of thought-checkpoint.ipynb  plan and execute-checkpoint.ipynb  react agent v2-checkpoint.ipynb  self ask-checkpoint.ipynb
agents/: agent.py  data_agent.py  data_utils.py  database_manager.py  medical_data_expert_agent.py  prompt_manager.py  query_router_agent.py  run_agent_to_be_delted.py  sql_data_expert_agent.py  table_expert_agent.py
agents/prompts/: main_prompt.txt  master prompt.txt  medical_expert.txt  table_details.txt  tool_calling.txt  tool_calling2.txt
agents/utils/: __init__.py  patient_data_manager.py
src/: __init__.py  rag_pipeline.py
src/llms/: __init__.py  factory.py
ui/: main.py  ui_test.py
ui/config/: settings.py
ui/routes/: auth.py  chat.py  ui.py
ui/static/my_layout/: index.html  script.js  style.css  textareaHandler.js
ui/templates/: base.html  index.html
ui/templates/components/: form.html
